# codekata

./: .gitignore  README.md
python/: README.md  pyproject.toml  test_two.py
python/codekata/: __main__.py  four.py  one.py  two.py
python/tests/: test_codekata.py  test_four.py  test_two.py
